--- a/Password_v2.ipynb
+++ b/Password_v2.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Password_v2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNDIW1GP3f5coE31m1kgw25",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,26 +19,36 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nehalrakesh/Python_practice/blob/main/Password_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QcG9_rFe3QXU",
-        "outputId": "a4fc260f-19d0-49c6-fc18-c0ec8c465883"
+        "outputId": "06a6a27b-c070-4c23-f848-983691989104"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{120031: 'dsfh@dhfF1', 120032: '2k$fhgdur', 120033: '55gi%hdj', 120034: 'kd__6kfg', 120035: 'ksd#j898fk'}\n"
+            "{'120031': 'dsfh@dhfF1', '120032': '2k$fhgdur', '120033': '55gi%hdj', '120034': 'kd__6kfg', '120035': 'ksd#j898fk'}\n"
           ]
         }
       ],
       "source": [
-        "userlist = [120031,120032,120033,120034,120035]\n",
+        "userlist = [\"120031\",\"120032\",\"120033\",\"120034\",\"120035\"]\n",
         "password = [\"dsfh@dhfF1\",\"2k$fhgdur\",\"55gi%hdj\",\"kd__6kfg\",\"ksd#j898fk\"]\n",
         "pass_dict ={}\n",
         "\n",
@@ -54,7 +66,7 @@
         "\n",
         "\n",
         "\n",
-        "userid = int(input(\"Please enter your user ID:    \"))\n",
+        "userid = input(\"Please enter your user ID:    \")\n",
         "if userid not in userlist:\n",
         "  print(\"you are not an existing user\\n Do you want to create new userID?(YES/NO)\")\n",
         "  response = input(\"YES/NO:    \")\n",
@@ -186,7 +198,7 @@
         "            lcase +=1\n",
         "          \n",
         "        pformat1=[numer,ucase,lcase,spchar]\n",
-        "        print(pformat1)\n",
+        "        # print(pformat1)\n",
         "\n",
         "        if 0 in pformat1:\n",
         "            print(\"Password should have atleast a numeric, an uppercase, a smallcase and a special character\")\n",
@@ -226,7 +238,7 @@
         "          lcase +=1\n",
         "        \n",
         "      pformat1=[numer,ucase,lcase,spchar]\n",
-        "      print(pformat1)\n",
+        "      # print(pformat1)\n",
         "\n",
         "      if 0 in pformat1:\n",
         "          print(\"Password should have atleast a numeric, an uppercase, a smallcase and a special character\")\n",
@@ -247,26 +259,44 @@
         "          pass_dict[userid] = pass1\n",
         "          print(\"Your userID is\",userid,\"and Your password is saved\")\n",
         "\n",
-        "      pass_dict\n"
+        "pass_dict\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iMRlYto7UR2k",
-        "outputId": "c1302d80-7b66-495f-b3db-38330cf0d93d"
+        "outputId": "3e006413-ef69-4158-ac2c-f98ba6a1f639"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please enter your user ID:    120031\n",
+            "Please enter your user ID:    nehalrakesh01\n",
             "You are a registered user\n",
-            "Please enter your old password:    dkfjngkjor\n",
-            "You have entered incorrect password. Please try again\n"
+            "Please enter your old password:    Nehalbhaiya@04\n",
+            "Please enter your new password:    Nehalbhaiya@26\n",
+            "[2, 1, 10, 1]\n",
+            "Please confirm your password:    Nehalbhaiya@26\n",
+            "Your userID is nehalrakesh01 and Your password is saved\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'120031': 'dsfh@dhfF1',\n",
+              " '120032': '2k$fhgdur',\n",
+              " '120033': '55gi%hdj',\n",
+              " '120034': 'kd__6kfg',\n",
+              " '120035': 'ksd#j898fk',\n",
+              " 'nehalrakesh01': 'Nehalbhaiya@26'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
